--- a/README
+++ b/README
@@ -5,6 +5,7 @@ python ./setup.py install
 See test_redef.py under your install path for examples.
 
 Redef is inteded to create lexically scope variables that when destroyed undo mock behavior.
+It was inspired by a perl module, Test::Resub - http://search.cpan.org/~airwave/Test-Resub-1.02/lib/Test/Resub.pm
 
 The best examples use unittest, but it should work with any testing framework.
 
